--- a/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
+++ b/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
@@ -4,14 +4,19 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <PackageId>Sanet.MVVM.Navigation.Avalonia</PackageId>
+        <Version>0.1.0</Version>
+        <Authors>Anton Makarevich</Authors>
+        <Company>Anton Makarevich</Company>
+        <Description>Sanet MVVM Navigation implementation for Avalonia</Description>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Sanet.MVVM.Core\Sanet.MVVM.Core.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Avalonia" Version="0.10.19" />
+      <PackageReference Include="Sanet.MVVM.Core" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
