--- a/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
+++ b/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
@@ -12,8 +12,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Avalonia" Version="11.0.0-preview8" />
-      <PackageReference Include="Sanet.MVVM.Core" Version="1.0.0" />
+      <PackageReference Include="Avalonia" Version="11.0.0-rc1.1" />
+      <PackageReference Include="Sanet.MVVM.Core" Version="1.0.2" />
     </ItemGroup>
 
 </Project>
