--- a/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
+++ b/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sanet.MVVM.Navigation.Avalonia</PackageId>
-        <Version>0.2.1-preview8</Version>
+        <Version>0.2.2-11rc1.1</Version>
         <Authors>Anton Makarevich</Authors>
         <Company>Anton Makarevich</Company>
         <Description>Sanet MVVM Navigation implementation for Avalonia</Description>
