--- a/Views/Sanet.MVVM.Views.Avalonia/Sanet.MVVM.Views.Avalonia.csproj
+++ b/Views/Sanet.MVVM.Views.Avalonia/Sanet.MVVM.Views.Avalonia.csproj
@@ -5,14 +5,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sanet.MVVM.Views.Avalonia</PackageId>
-        <Version>0.2.1-preview8</Version>
+        <Version>1.0.11</Version>
         <Authors>Anton Makarevich</Authors>
         <Company>Anton Makarevich</Company>
-        <Description>Avalonia BaseView for Sanet MVVM</Description>
+        <Description>Avalonia BaseView for Sanet MVVM. Works with AvaloniaUI v11.0.0</Description>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Avalonia" Version="11.0.0-preview8" />
+      <PackageReference Include="Avalonia" Version="11.0.0" />
       <PackageReference Include="Sanet.MVVM.Core" Version="1.0.0" />
     </ItemGroup>
 
