--- a/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
+++ b/Navigation/Sanet.MVVM.Navigation.Avalonia/Sanet.MVVM.Navigation.Avalonia.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sanet.MVVM.Navigation.Avalonia</PackageId>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Version>1.0.11</Version>
         <Authors>Anton Makarevich</Authors>
         <Company>Anton Makarevich</Company>
