--- a/Sanet.MVVM.Core/Sanet.MVVM.Core.csproj
+++ b/Sanet.MVVM.Core/Sanet.MVVM.Core.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PackageId>Sanet.MVVM.Core</PackageId>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <Version>1.1.0</Version>
         <Authors>Anton Makarevich</Authors>
         <Company>Anton Makarevich</Company>
